--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,33 @@
-# Node modules
+# Dependencies
 node_modules/
-backend/node_modules/
-frontend/node_modules/
+*/node_modules/
 
-# Environment
+# Environment variables
 .env
 .env.local
-.env.production
-.env.development
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Logs
-npm-debug.log*
-yarn-debug.log*
-pnpm-debug.log*
 logs/
-
-# Build output
-frontend/build/
-dist/
-backend/dist/
+*.log
+npm-debug.log*
 
 # OS files
 .DS_Store
 Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Build files
+*/build/
+*/dist/
+
+# Testing
+coverage/
+.nyc_output/
